smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enum-values/missing-newline-after-assignment.smithy
// Parse error at line 6, column 13 near `BAZ`: Expected a line break | Model
$version: "2.0"
namespace smithy.example

intEnum Foo {
    BAR = 1 BAZ = 2
}
